fix: fix truncated text in navigation menu

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,7 @@
   margin: 0;
   text-decoration: none;
   list-style: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 body {
   margin: 0 auto;
@@ -53,7 +53,7 @@ footer {
 .navigation-menu {
   background-color: var(--gray);
   color: #fff;
-  font-size: 1.3em;
+  font-size: 1em;
 }
 
 .navigation-menu ul {
@@ -65,7 +65,7 @@ footer {
 }
 
 .navigation-menu li {
-  padding: 0.8em;
+  padding: 0.5em;
 }
 .container h1,
 .upgrades h2,
@@ -78,7 +78,7 @@ footer {
 .hero {
   position: relative;
   min-height: 600px;
-  background-image: url('/images/vehicles/delorean.jpg');
+  background-image: url("/images/vehicles/delorean.jpg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
